// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly if place has a website 1`] = `
<li
  className="search-result"
>
  <img
    className="icon"
    src="https://maps.gstatic.com/mapfiles/place_api/icons/restaurant-71.png"
  />
  <h3>
     
    Donut Hut
     
  </h3>
  <p>
    <a
      href="https://maps.google.com/?cid=12061977042674382991"
      target="_blank"
    >
      31 Little Canada Road East, Little Canada
    </a>
      -  
    <a
      href="http://example.com"
      target="_blank"
    >
      example.com
    </a>
  </p>
</li>
`;

exports[`renders correctly if place is missing a website 1`] = `
<li
  className="search-result"
>
  <img
    className="icon"
    src="https://maps.gstatic.com/mapfiles/place_api/icons/restaurant-71.png"
  />
  <h3>
     
    Donut Hut
     
  </h3>
  <p>
    <a
      href="https://maps.google.com/?cid=12061977042674382991"
      target="_blank"
    >
      31 Little Canada Road East, Little Canada
    </a>
      -  
    <a
      href={undefined}
      target="_blank"
    >
      
    </a>
  </p>
</li>
`;
